simple-microservices/employee-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-deployment-v1
spec:
  selector:
    matchLabels:
      app: employee
      version: v1
  template:
    metadata:
      labels:
        app: employee
        version: v1
    spec:
      containers:
      - name: employee
        image: piomin/employee-service
        ports:
        - containerPort: 8080
        volumeMounts:
          - mountPath: /etc/podinfo
            name: podinfo
      volumes:
        - name: podinfo
          downwardAPI:
            items:
              - path: "labels"
                fieldRef:
                  fieldPath: metadata.labels
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-deployment-v2
spec:
  selector:
    matchLabels:
      app: employee
      version: v2
  template:
    metadata:
      labels:
        app: employee
        version: v2
    spec:
      containers:
        - name: employee
          image: piomin/employee-service
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /etc/podinfo
              name: podinfo
      volumes:
        - name: podinfo
          downwardAPI:
            items:
              - path: "labels"
                fieldRef:
                  fieldPath: metadata.labels
---
apiVersion: v1
kind: Service
metadata:
  name: employee-service
spec:
  type: ClusterIP
  selector:
    app: employee
  ports:
  - port: 8080
    targetPort: 8080
